--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,116 @@
+@import "tailwindcss";
+
+@theme {
+	--color-bg-white: #ffffff;
+	--color-bg-black: #1f2937;
+	--color-bg-primary: #fdda6e;
+	--color-bg-secondary: #fff9e2;
+	--color-bg-sub: #ffedbf;
+	--color-bg-buttonPrimary: #ffc100;
+	--color-bg-hover-primary: #ffc100;
+	--color-bg-hover-buttonPrimary: #fdda6e;
+	--color-bg-disabled: #fff7e5;
+
+	--color-text-black: #1f2937;
+	--color-text-white: #ffffff;
+	--color-text-gray: #e2e2e2;
+	--color-text-brand: #fdda6e;
+	--color-text-warning: #e88471;
+	--color-text-secondary: #dbb594;
+	--color-text-info: #ffc100;
+
+	--color-border-primary: #ffc100;
+	--color-border-secondary: #d9d9d9;
+	--color-border-black: #1f2937;
+
+	--radius-input: 20px;
+	--radius-modal: 24px;
+	--radius-button: 12px;
+
+	--spacing-4: 4px;
+	--spacing-8: 8px;
+	--spacing-12: 12px;
+	--spacing-16: 16px;
+	--spacing-20: 20px;
+	--spacing-24: 24px;
+	--spacing-28: 28px;
+	--spacing-32: 32px;
+	--spacing-36: 36px;
+	--spacing-40: 40px;
+	--spacing-44: 44px;
+	--spacing-48: 48px;
+	--spacing-52: 52px;
+	--spacing-56: 56px;
+	--spacing-60: 60px;
+	--spacing-64: 64px;
+	--spacing-68: 68px;
+	--spacing-72: 72px;
+	--spacing-76: 76px;
+	--spacing-80: 80px;
+	--spacing-84: 84px;
+	--spacing-88: 88px;
+	--spacing-92: 92px;
+	--spacing-96: 96px;
+	--spacing-100: 100px;
+
+	--text-heading-logo: 250px;
+	--text-heading-h1: 48px;
+	--text-heading-h2: 44px;
+	--text-heading-h3: 40px;
+	--text-heading-h4: 36px;
+	--text-heading-h5: 32px;
+	--text-heading-h6: 28px;
+	--text-heading-h7: 14px;
+	--text-heading-logo--font-weight: 700;
+	--text-heading-h1--font-weight: 700;
+	--text-heading-h2--font-weight: 700;
+	--text-heading-h3--font-weight: 700;
+	--text-heading-h4--font-weight: 700;
+	--text-heading-h5--font-weight: 700;
+	--text-heading-h6--font-weight: 700;
+	--text-heading-h7--font-weight: 700;
+
+	--text-body-lg: 20px;
+	--text-body-md: 16px;
+	--text-body-sm: 14px;
+	--text-body-xs: 12px;
+
+	--shadow-2: 0 0 1px rgba(0, 0, 0, 0.25), 0 2px 10px rgba(0, 0, 0, 0.1);
+	--shadow-4: 0 0 1px rgba(0, 0, 0, 0.25), 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+@font-face {
+	font-family: "CookieRun-Regular";
+	src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/CookieRun-Regular.woff")
+		format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family:
+		"CookieRun-Regular", system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	display: flex;
+	margin: 0;
+	height: 100vh;
+	width: 100vw;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
