--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 #root {
+	width: 100vw;
+	height: 100vh;
+}
+
+main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	height: 100%;
 }
