--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,25 @@
 	font-style: normal;
 }
 
+@layer utilities {
+	/* 1. Fade In */
+	@keyframes fade-in {
+		from {
+			opacity: 0;
+		}
+		to {
+			opacity: 1;
+		}
+	}
+
+	.animate-fade-in {
+		animation-name: fade-in;
+		animation-duration: 0.5s;
+		animation-timing-function: ease-out;
+		animation-fill-mode: forwards;
+	}
+}
+
 :root {
 	font-family: "CookieRun", system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
